--- a/SimpleWebServer/SimpleWebServer.csproj
+++ b/SimpleWebServer/SimpleWebServer.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Content Include="Website\CSS\demo.css" />
     <Content Include="Website\favicon.ico" />
+    <Content Include="Website\Pages\Demo\ajax.html" />
     <Content Include="Website\Pages\Demo\buttonclick.html" />
     <Content Include="Website\Pages\Demo\clicked.html" />
     <Content Include="Website\Pages\Demo\redirect.html" />
